Make service file parameterizable

--- a/ooler_mqtt_bridge@.service
+++ b/ooler_mqtt_bridge@.service
@@ -3,7 +3,7 @@ Description=Ooler MQTT Bridge
 
 [Service]
 WorkingDirectory=/usr/local/bin/
-ExecStart=/usr/local/bin/ooler_mqtt_bridge /etc/ooler_mqtt_bridge.yaml
+ExecStart=/usr/local/bin/ooler-mqtt-bridge /etc/%I
 User=pi
 Restart=always
 RestartSec=30
