--- a/ooler_mqtt_bridge_venv@.service
+++ b/ooler_mqtt_bridge_venv@.service
@@ -1,5 +1,14 @@
+# Ooler MQTT service, using Python virtual env to contain dependencies.
+# To set up your environment:
+# - Add a virtual environment to your code directory, like `python3 -m venv env`
+# - Install dependencies in the venv (`source env/bin/activate && pip install -r requirements.txt`)
+# - Put your config file(s) into /etc/
+# - Link your code directory as /usr/local/bin/ooler-mqtt-bridge
+# - Install this service file (into /etc/systemd/system, or such)
+# - Enable your service(s) for each config file, like `systemctl enable ooler_mqtt_bridge_venv@ooler_mqtt_bridge_1.yml`
+
 [Unit]
-Description=Ooler MQTT Bridge
+Description=Ooler MQTT Bridge, using virtual environment
 
 [Service]
 WorkingDirectory=/usr/local/bin/ooler-mqtt-bridge
