--- a/ooler_mqtt_bridge.service
+++ b/ooler_mqtt_bridge.service
@@ -1,3 +1,10 @@
+# Ooler MQTT service for a single device
+# To set up your environment:
+# - Install dependencies (pip install -r requirements.txt`)
+# - Put your config file into /etc/
+# - Install this service file (into /etc/systemd/system, or such)
+# - Enable your service, like `systemctl enable ooler_mqtt_bridge
+
 [Unit]
 Description=Ooler MQTT Bridge
 
